# atuin-ai-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml.example  pyproject.toml
atuin_ai_proxy/: __init__.py  auth.py  backend.py  cli.py  diagnostics.py  protocol.py  server.py  settings.py
tests/: test_auth.py  test_backend.py  test_cli.py  test_diagnostics.py  test_protocol.py  test_server.py  test_settings.py
